--- a/css/styles.css
+++ b/css/styles.css
@@ -9,8 +9,14 @@ h1, h2, h3, h4, h5, h6 {
   font-family: "Montserrat-Bold";
 }
 
+h3 {
+  font-weight: bolder;
+}
+
 p {
   color: #603601;
+  font-weight: 1000;
+  font-size: 1.25rem;
 }
 
 /* Headings */
@@ -49,7 +55,7 @@ p {
 
 .navbar {
   /* padding: 0 0 4.5rem; */
-  background-color: #1C0A00;
+  background-color: #361500;
 }
 
 .navbar-brand {
@@ -78,7 +84,8 @@ p {
 #title {
   text-align: left;
   margin-top: 50px;
-  background-color: #361500;
+  background-color: #CC9544;
+  color: #603601;
 }
 
 #title .container-fluid {
@@ -88,7 +95,7 @@ p {
 /* Title Image */
 
 .title-image {
-  width: 70%;
+  width: 25%;
   transform: rotate(30deg);
   position: absolute;
   right: 20%;
@@ -161,8 +168,8 @@ p {
 }
 
 .card {
-  background-color: #361500;
-  color: #CC9544;
+  background-color: #CC9544;
+  color: #603601;
 }
 .btn {
   color: #CC9544;
