--- a/css/styles.css
+++ b/css/styles.css
@@ -85,7 +85,7 @@ p {
   text-align: left;
   margin-top: 50px;
   background-color: #CC9544;
-  color: #fff;
+/*   color: #fff; */
 }
 
 #title .container-fluid {
